.metadata/.plugins/org.eclipse.cdt.ui/LED_control.build.log
11:08:33 **** Incremental Build of configuration Debug for project LED_control ****
make -j18 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F407xx -c -I../Core/Inc -I../USB_HOST/App -I../USB_HOST/Target -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/ST/STM32_USB_Host_Library/Core/Inc -I../Middlewares/ST/STM32_USB_Host_Library/Class/CDC/Inc -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c:73:1: error: unknown type name 'bool'
   73 | bool blue_button_pressed() {
      | ^~~~
../Core/Src/main.c:27:1: note: 'bool' is defined in header '<stdbool.h>'; did you forget to '#include <stdbool.h>'?
   26 | #include "usb_host.h"
  +++ |+#include <stdbool.h>
   27 | 
make: *** [Core/Src/subdir.mk:46: Core/Src/main.o] Error 1
"make -j18 all" terminated with exit code 2. Build might be incomplete.

11:08:34 Build Failed. 2 errors, 0 warnings. (took 594ms)

